# tina

./: .gitignore  .gitmodules  CMakeLists.txt  auto_gen.sh
.github/workflows/: auto_gen.yml  external_files_sync.yml
cmake/: openssl-dep.cmake  openssl-dep.cmake.7
core/: CMakeLists.txt
core/include/core/: global_macros.h
core/include/core/log/: log.h
core/include/core/utils/: dirs.h  email_addr.h  errcodes.h  exception.h  exe_infos.h  folders.h  time.h
core/src/: CMakeLists.txt
core/src/log/: g3log_sink.cpp  g3log_sink.h  log.cpp
core/src/sql/: sql.cpp  sql.h  sql_types.h
core/src/sql/callbacks/: sql_callbacks.cpp  sql_callbacks.h
core/src/utils/: dirs.cpp  email_addr.cpp  errcodes.cpp  exception.cpp  exe_infos.cpp  folders.cpp  time.cpp
core/tools/: update_utils_errcodes.py
core/tools/data/: update_utils_errcodes.cfg
core/tools/templates/update_utils_errcodes/: errcodes.cpp.in  errcodes.h.in
tools/: list_todo.py
tools/data/: list_todo.cfg
